@@ -3,9 +3,11 @@ package com.kh.app.security.config;
 import com.kh.app.security.filter.JwtFilter;
 import com.kh.app.security.filter.LoginFilter;
 import com.kh.app.security.jwt.JwtUtil;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -17,9 +19,10 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import tools.jackson.databind.ObjectMapper;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 @EnableWebSecurity
@@ -31,85 +34,51 @@ public class SecurityConfig {
     private final ObjectMapper objectMapper;
 
     @Bean
-    public AuthenticationManager authenticationManager() {
+    public AuthenticationManager authenticationManager(){
         return authenticationConfiguration.getAuthenticationManager();
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
+    public PasswordEncoder passwordEncoder(){
         return new BCryptPasswordEncoder();
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity hs) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity hs){
 
-        LoginFilter loginFilter =
-                new LoginFilter(authenticationManager(), jwtUtil, objectMapper);
-
+        LoginFilter loginFilter = new LoginFilter( authenticationManager(),  jwtUtil , objectMapper );
         loginFilter.setFilterProcessesUrl("/api/member/login");
 
         hs
-                // csrf off
                 .csrf(AbstractHttpConfigurer::disable)
-
-                // form login off
                 .formLogin(AbstractHttpConfigurer::disable)
-
-                // http basic off
                 .httpBasic(AbstractHttpConfigurer::disable)
-
-                // stateless
-                .sessionManagement(
-                        x -> x.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // 모든 요청 허용
+                .sessionManagement( x -> x.sessionCreationPolicy(SessionCreationPolicy.STATELESS) )
                 .authorizeHttpRequests(
-                        x -> x.anyRequest().permitAll()
+                        x -> x
+                                .requestMatchers("/api/member/join").permitAll()
+                                .requestMatchers("/api/member/login").permitAll()
+                                .requestMatchers("/swagger-ui/**" , "/v3/api-docs/**").permitAll()
+                                .anyRequest().authenticated()
                 )
-
-                // login filter
-                .addFilterAt(
-                        loginFilter,
-                        UsernamePasswordAuthenticationFilter.class
-                )
-
-                // jwt filter
-                .addFilterBefore(
-                        new JwtFilter(jwtUtil),
-                        LoginFilter.class
-                )
-
-                // cors
-                .cors(cors -> cors.configurationSource(request -> {
-
-                    CorsConfiguration config = new CorsConfiguration();
-
-                    config.setAllowedOrigins(List.of(
-                            "http://localhost:5173",
-                            "http://127.0.0.1:5173"
-                    ));
-
-                    config.setAllowedMethods(List.of(
-                            "GET",
-                            "POST",
-                            "PUT",
-                            "DELETE",
-                            "PATCH",
-                            "OPTIONS"
-                    ));
-
-                    config.setAllowedHeaders(List.of("*"));
-
-                    config.setAllowCredentials(true);
-
-                    config.setExposedHeaders(List.of("Authorization"));
-
-                    config.setMaxAge(3600L);
-
-                    return config;
-                }));
-
+                .addFilterAt(loginFilter , UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new JwtFilter(jwtUtil) , LoginFilter.class)
+                .cors(cors -> cors.configurationSource(new CorsConfigurationSource() {
+                    @Override
+                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
+                        CorsConfiguration config = new CorsConfiguration();
+                        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+                        config.setAllowedMethods(Collections.singletonList("*"));
+                        config.setAllowedHeaders(Collections.singletonList("*"));
+                        config.setAllowCredentials(true);
+                        config.setExposedHeaders(Collections.singletonList("Authorization"));
+                        config.setMaxAge(3600L);
+                        return config;
+                    }
+                }))
+        ;
         return hs.build();
     }
+
+
 }
